--- a/Local_Projects/newsletter-source-hub/package.json
+++ b/Local_Projects/newsletter-source-hub/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.500.0",
     "@modelcontextprotocol/sdk": "^1.25.3",
+    "@types/three": "^0.182.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.3.0",
     "framer-motion": "^12.29.0",
@@ -25,6 +26,7 @@
     "react-dom": "^18",
     "rss-parser": "^3.13.0",
     "tailwind-merge": "^2.6.0",
+    "three": "^0.182.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
