--- a/vibe-portfolio/package.json
+++ b/vibe-portfolio/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
@@ -21,12 +24,14 @@
     "react-router-dom": "^6.30.3",
     "reactflow": "^11.11.4",
     "remark-gfm": "^4.0.1",
+    "three": "^0.182.0",
     "web-vitals": "^4.2.4",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react-dom": "^19.2.3",
+    "@types/three": "^0.182.0",
     "@vercel/node": "^5.5.27",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.19",
