--- a/vibe-portfolio/.env.example
+++ b/vibe-portfolio/.env.example
@@ -18,3 +18,15 @@ VITE_CLAWBOT_WS_URL="ws://localhost:18789"
 # ClawBot Gateway Token
 # Get this from ~/.clawdbot/clawdbot.json after running 'clawdbot onboard'
 VITE_CLAWBOT_TOKEN="your-clawbot-gateway-token"
+
+# Supabase (Knowledge Store)
+SUPABASE_URL="https://your-project.supabase.co"
+SUPABASE_ANON_KEY="your-anon-key"
+SUPABASE_SERVICE_KEY="your-service-key"
+
+# OpenAI (Embeddings only — text-embedding-3-small)
+OPENAI_API_KEY="your-openai-key"
+
+# Optional Integrations
+NOTION_TOKEN="your-notion-integration-token"
+GITHUB_TOKEN="your-github-personal-access-token"
