--- a/vibe-portfolio/package.json
+++ b/vibe-portfolio/package.json
@@ -13,11 +13,17 @@
   "dependencies": {
     "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
+    "@notionhq/client": "^2.2.3",
+    "@octokit/rest": "^20.1.2",
+    "@supabase/supabase-js": "^2.39.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
     "framer-motion": "^12.29.0",
+    "cheerio": "^1.0.0-rc.12",
     "lucide-react": "^0.562.0",
+    "openai": "^4.28.0",
+    "pdf-parse": "^1.1.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
