feat(apex): massive content & infra update - Academy, GamePage, Terminal, and Supabase integration

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,10 @@ VITE_CLAWBOT_TOKEN="your-clawbot-gateway-token"
 # Supabase (Knowledge Store)
 SUPABASE_URL="https://your-project.supabase.co"
 SUPABASE_ANON_KEY="your-anon-key"
-SUPABASE_SERVICE_KEY="your-service-key"
+SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
+
+# Admin Dashboard (server-side validation)
+ADMIN_DASH_PASSWORD="your-admin-password"
 
 # OpenAI (Embeddings only — text-embedding-3-small)
 OPENAI_API_KEY="your-openai-key"
