--- a/package.json
+++ b/package.json
@@ -3,30 +3,24 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": ">=20.20.0 || >=22.22.0 || >=24.13.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "analyze": "npm run build && open dist/stats.html",
-    "typecheck": "tsc --noEmit",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "@notionhq/client": "^2.2.3",
     "@octokit/rest": "^20.1.2",
+    "@supabase/supabase-js": "^2.39.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
-    "@supabase/supabase-js": "^2.39.0",
-    "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^12.29.0",
+    "cheerio": "^1.0.0-rc.12",
     "lucide-react": "^0.562.0",
     "openai": "^4.28.0",
     "pdf-parse": "^1.1.4",
@@ -46,9 +40,7 @@
     "@types/three": "^0.182.0",
     "@vercel/node": "^5.5.27",
     "@vitejs/plugin-react": "^5.0.0",
-    "@vitest/coverage-v8": "^4.0.18",
     "autoprefixer": "^10.4.19",
-    "pg": "^8.17.2",
     "postcss": "^8.4.38",
     "puppeteer-core": "^24.36.0",
     "rollup-plugin-visualizer": "^6.0.5",
@@ -56,7 +48,6 @@
     "terser": "^5.46.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
-    "vitest": "^4.0.18",
     "ws": "^8.19.0"
   }
 }
