--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@google/generative-ai": "^0.24.1",
     "@notionhq/client": "^2.2.3",
     "@octokit/rest": "^20.1.2",
-    "@supabase/supabase-js": "^2.39.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
-    "framer-motion": "^12.29.0",
+    "@supabase/supabase-js": "^2.39.0",
     "cheerio": "^1.0.0-rc.12",
+    "framer-motion": "^12.29.0",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.562.0",
     "openai": "^4.28.0",
     "pdf-parse": "^1.1.4",
