feat: implement Perplexity fallback AI, fix mobile terminal branding, enable Matrix view on all devices

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,38 @@
-# Gemini API Configuration
+# ═══════════════════════════════════════════════════════════════════════════════
+# APEX TERMINAL AI PROVIDER CONFIGURATION
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# PRIMARY AI PROVIDER: Google Gemini (Vertex AI)
 # Get your API key from: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Optional: Model Configuration (defaults to gemini-2.5-flash)
+# Optional: Gemini Model Configuration (defaults to gemini-2.5-flash)
+# Available models: gemini-2.5-flash, gemini-2.5-pro, gemini-2.0-flash
 # GEMINI_MODEL=gemini-2.5-flash
 
-# Vercel Configuration
+# FALLBACK AI PROVIDER: Perplexity (for redundancy)
+# Get your API key from: https://www.perplexity.ai/settings/api
+PERPLEXITY_API_KEY=your_perplexity_api_key_here
+
+# Optional: Perplexity Model Configuration (defaults to sonar-reasoning-pro)
+# Available models: sonar, sonar-pro, sonar-reasoning-pro
+# PERPLEXITY_MODEL=sonar-reasoning-pro
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# GOOGLE CLOUD CONFIGURATION (for Vertex AI)
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# Google Cloud Project ID (required for Vertex AI)
+# GOOGLE_CLOUD_PROJECT=your-project-id
+
+# Google Cloud Region (defaults to us-central1)
+# GOOGLE_CLOUD_REGION=us-central1
+
+# Path to service account JSON (optional - uses ADC if not set)
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# VERCEL CONFIGURATION
+# ═══════════════════════════════════════════════════════════════════════════════
+
 VERCEL_OIDC_TOKEN=your_vercel_oidc_token_here
