--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,46 @@
 # ═══════════════════════════════════════════════════════════════════════════════
 # APEX TERMINAL AI PROVIDER CONFIGURATION
+# Multi-Tier Fallback System for Maximum Resiliency
 # ═══════════════════════════════════════════════════════════════════════════════
 
-# PRIMARY AI PROVIDER: Google Gemini (Vertex AI)
-# Get your API key from: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=your_gemini_api_key_here
-
-# Optional: Gemini Model Configuration (defaults to gemini-2.5-flash)
-# Available models: gemini-2.5-flash, gemini-2.5-pro, gemini-2.0-flash
-# GEMINI_MODEL=gemini-2.5-flash
-
-# FALLBACK AI PROVIDER: Perplexity (for redundancy)
+# TIER 1: PRIMARY - Perplexity (Best for coding, web-grounded)
 # Get your API key from: https://www.perplexity.ai/settings/api
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
 
-# Optional: Perplexity Model Configuration (defaults to sonar-reasoning-pro)
-# Available models: sonar, sonar-pro, sonar-reasoning-pro
-# PERPLEXITY_MODEL=sonar-reasoning-pro
+# TIER 2: FALLBACK - Groq (FREE tier available, fast Llama models)
+# Get your API key from: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+
+# TIER 3: FALLBACK - Google Gemini (FREE tier available)
+# Get your API key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# TIER 4: FALLBACK - Cohere (FREE tier available)
+# Get your API key from: https://dashboard.cohere.com/api-keys
+COHERE_API_KEY=your_cohere_api_key_here
 
 # ═══════════════════════════════════════════════════════════════════════════════
-# GOOGLE CLOUD CONFIGURATION (for Vertex AI)
+# OPTIONAL: Model Configuration
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# Perplexity Model (default: sonar-reasoning-pro)
+# Available: sonar, sonar-pro, sonar-reasoning-pro
+# PERPLEXITY_MODEL=sonar-reasoning-pro
+
+# Groq Model (default: llama-3.1-70b-versatile)
+# Available: llama-3.1-70b-versatile, llama-3.1-8b-instant, mixtral-8x7b-32768
+# GROQ_MODEL=llama-3.1-70b-versatile
+
+# Gemini Model (default: gemini-1.5-flash)
+# Available: gemini-1.5-flash, gemini-1.5-pro
+# GEMINI_MODEL=gemini-1.5-flash
+
+# Cohere Model (default: command-r)
+# Available: command-r, command-r-plus
+# COHERE_MODEL=command-r
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# GOOGLE CLOUD CONFIGURATION (for Vertex AI - optional)
 # ═══════════════════════════════════════════════════════════════════════════════
 
 # Google Cloud Project ID (required for Vertex AI)
