--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
     "@supabase/supabase-js": "^2.39.0",
+    "bash-language-server": "^5.6.0",
     "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^12.29.0",
     "fuse.js": "^7.1.0",
@@ -33,6 +34,7 @@
     "remark-gfm": "^4.0.1",
     "three": "^0.182.0",
     "web-vitals": "^4.2.4",
+    "yaml-language-server": "^1.19.2",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
