fix: Add useAgentSwarm hook and GSAP dependency

--- a/apex-os-vibe/package.json
+++ b/apex-os-vibe/package.json
@@ -12,13 +12,13 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "agents:start": "node scripts/agent-orchestrator.js start",
-    "agents:stop": "node scripts/agent-orchestrator.js stop",
-    "agents:status": "node scripts/agent-orchestrator.js status",
-    "agents:scan": "node scripts/agent-orchestrator.js task security-monitor scan_vulnerabilities '{\"path\": \".\"}'",
-    "agents:deploy": "node scripts/agent-orchestrator.js task deployment-automation deploy_application '{\"environment\": \"production\"}'",
-    "agents:compliance": "node scripts/agent-orchestrator.js task compliance-guardian check_compliance '{\"standard\": \"SOC2\"}'",
-    "agents:cost": "node scripts/agent-orchestrator.js task cost-optimizer analyze_costs '{}'"
+    "agents:start": "node scripts/agent-orchestrator.cjs start",
+    "agents:stop": "node scripts/agent-orchestrator.cjs stop",
+    "agents:status": "node scripts/agent-orchestrator.cjs status",
+    "agents:scan": "node scripts/agent-orchestrator.cjs task security-monitor scan_vulnerabilities '{\"path\": \".\"}'",
+    "agents:deploy": "node scripts/agent-orchestrator.cjs task deployment-automation deploy_application '{\"environment\": \"production\"}'",
+    "agents:compliance": "node scripts/agent-orchestrator.cjs task compliance-guardian check_compliance '{\"standard\": \"SOC2\"}'",
+    "agents:cost": "node scripts/agent-orchestrator.cjs task cost-optimizer analyze_costs '{}'"
   },
   "dependencies": {
     "@google-cloud/vertexai": "^1.10.0",
@@ -30,11 +30,12 @@
     "@react-three/postprocessing": "^3.0.4",
     "@supabase/supabase-js": "^2.39.0",
     "@types/d3": "^7.4.3",
+    "@types/gsap": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "d3": "^7.9.0",
     "framer-motion": "^12.29.0",
     "fuse.js": "^7.1.0",
-    "gsap": "^3.12.5",
+    "gsap": "^3.14.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.562.0",
@@ -56,11 +57,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
+    "@types/express": "^5.0.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.182.0",
+    "@types/uuid": "^10.0.0",
     "@vercel/node": "^5.5.27",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.19",
@@ -70,6 +73,7 @@
     "postcss": "^8.4.38",
     "puppeteer-core": "^24.36.0",
     "rollup-plugin-visualizer": "^6.0.5",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.17",
     "terser": "^5.46.0",
     "ts-jest": "^29.4.6",
